--- a/src/Routes/Home/home.css
+++ b/src/Routes/Home/home.css
@@ -44,7 +44,7 @@
   width: 95%;
   margin: auto;
 }
-.home .find-a-tutor div:nth-child(2) img {
+.blobi {
   width: 300px;
   height: 300px;
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% !important;
