--- a/src/Routes/register/register.css
+++ b/src/Routes/register/register.css
@@ -13,10 +13,60 @@
   position: absolute;
   top: -100%;
 }
+.grid {
+  display: grid;
+  text-align: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
+}
+.grid .student {
+  height: fit-content;
+  background: whitesmoke;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+.grid .tutor {
+  height: fit-content;
+  background: whitesmoke;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.grid h1 {
+  margin: 20px 0;
+}
+.grid p {
+  margin: 20px 5px;
+  text-align: left;
+}
+.grid button {
+  background: var(--primary-btn-color);
+  outline: none;
+  border: none;
+  width: 20vh;
+  margin: 10px 0;
+  padding: 20px 0;
+  border-radius: 20px;
+  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 2s;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+.grid button:hover {
+  background-color: var(--color-two);
+  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 2s;
+}
 .register-section {
-  width: clamp(200px, 80%, 800px);
+  width: clamp(200px, 90%, 1000px);
   margin: auto;
   margin-top: 100px;
+  margin-bottom: 100px;
+  height: 100%;
   position: relative;
   z-index: 0;
 
@@ -29,12 +79,14 @@
 .register-section form {
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(15px);
-  margin: 30px 0;
+  width: 80%;
+  margin: auto;
   box-shadow: rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
     rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
     rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   padding: 2px 0;
+  margin-bottom: 10px;
 }
 .register-section label {
   display: block;
@@ -46,7 +98,7 @@
 .register-section form input {
   margin: 15px 10px;
   padding: 15px 10px;
-  width: 90%;
+  width: 80%;
   color: var(--tertiary-font-color);
   border-radius: 10px;
   outline: none;
@@ -66,6 +118,7 @@
   font-size: 1.2em;
   cursor: pointer;
   border-radius: 10px;
+  margin-bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
     rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
@@ -79,4 +132,9 @@
   background: grey !important;
   color: grey;
   cursor: auto;
+}
+@media screen and (max-width: 700px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
